Use Jib to build docker image (#82)
https://github.com/GoogleContainerTools/jib/tree/master/jib-gradle-plugin